tests/snapshots/snapshots__snapshot_help_agent.snap
---
source: tests/snapshots.rs
expression: "help_output(&[\"agent\", \"--help\"])"
---
Show session summary per agent

Usage:
  ah agent [OPTIONS]

Shows how many sessions were found for each agent and the latest modified time.

Options:
  --table                 Output as aligned table
  --tsv                   Output as TSV (tab-separated values)
  --ltsv                  Output as LTSV (Labeled TSV)
  --json                  Output as JSON Lines

Default output (when no format flag is given):
  Aligned table with auto-pager on TTY, plain TSV when piped

Global options:
  -a, --all               Show all agents (disable default cwd filtering)
  -A                      Show all agents including all configured remotes
  --agent <NAME>          Filter by agent name (e.g. claude, codex, gemini)
  -n, --limit N           Max session files to scan (default: 0, no limit)
  --remote <NAME>         Include sessions from remote host (requires ah on remote; see ~/.ahrc [remotes.*])
  --since <SPEC>          Show sessions newer than (e.g. "2026-03-20", "3d", "1w", "2m" = ~60 days)
  --until <SPEC>          Show sessions older than (e.g. "2026-03-20", "3d", "1w", "2m" = ~60 days)
  --subagents             Include subagent sessions (spawned by another session)

Display options:
  --color                 Force colored output (even through pipes)
  --no-color              Disable colored output
  --no-pager              Disable automatic pager
  --debug                 Show debug info (glob expansion, scan counts, timing) on stderr
