tests/snapshots/snapshots__snapshot_help_memory.snap
---
source: tests/snapshots.rs
expression: "help_output(&[\"memory\", \"--help\"])"
---
List agent memory files

Usage:
  ah memory [OPTIONS]

Options:
  -o, --fields <FIELDS>   Select output fields (replaces defaults, see --list-fields)
                          Default: agent, project, type, name, modified_at, description
  -O, --extra-fields <FIELDS>  Add fields to defaults (comma-separated)
  -t, --type <TYPE>       Filter by memory type (user/feedback/project/reference/instruction)
  --table                 Aligned table with header row
  --tsv                   Tab-separated values (no header, no color)
  --ltsv                  Labeled Tab-Separated Values
  --json                  JSON Lines output
  -S, --sort <FIELD>      Sort by field (default: modified_at)
  --asc                   Sort ascending
  --desc                  Sort descending (default)
  -L, --list-fields       List available output fields and exit (use with --json for machine-readable output)

Default output (when no format flag is given):
  Aligned table with auto-pager on TTY, plain TSV when piped

A project-level AGENTS.md is listed as agent `shared` and matches any --agent filter.

Interactive mode:
  -i, --interactive       Browse memory files via fuzzy finder
  -s <CMD>                Selector command (default: $AH_SELECTOR or fzf)
  --no-preview            Disable preview

Global options:
  -a, --all               Show all memory files (disable default cwd filtering)
  -A                      Show all memory files including all configured remotes
  --agent <NAME>          Filter by agent name (e.g. claude)
  -d, --dir <PATH>        Filter by working directory (default: current directory)
  -q, --query <REGEX>     Search query (regex, case-insensitive)
  --remote <NAME>         Include memory files from remote host (requires ah on remote; see ~/.ahrc [remotes.*])
  --since <SPEC>          Show files newer than (e.g. "2026-03-20", "3d", "1w")
  --until <SPEC>          Show files older than (e.g. "2026-03-20", "3d", "1w")

Display options:
  --color                 Force colored output (even through pipes)
  --no-color              Disable colored output
  --no-pager              Disable automatic pager
  --debug                 Show debug info (glob expansion, scan counts, timing) on stderr
