tests/snapshots/snapshots__snapshot_help_show.snap
---
source: tests/snapshots.rs
expression: "help_output(&[\"show\", \"--help\"])"
---
Show session transcript

Usage:
  ah show [OPTIONS] [SESSION]

If SESSION is omitted, ah reads it from piped stdin (first line); if stdin is
a terminal or empty, ah shows the latest session matching -q and other filters.
Use - as SESSION to read it from stdin explicitly.

Transcript output:
  --head N                Show first N messages only
  --pretty                Pretty-print with colors (default)
  --raw                   Output raw session file content
  --json                  Output normalized JSON Lines ({"role":"user","text":"..."})
  --md                    Output as Markdown (## User / ## Assistant headers)
  -f, --follow            Follow session output in real-time (like tail -f)
  --highlight <PATTERN>   Highlight matching text in pretty output (case-insensitive; requires color)

Metadata output:
  -o, --fields <FIELDS>   Output session metadata as TSV instead of transcript
  --tsv                   Metadata mode without -o (default field: title)

Interactive mode:
  -i, --interactive       Select session via fuzzy finder then show it
  --interactive-display <FIELDS>  Override display columns in fuzzy finder
  -s <CMD>                Selector command (default: $AH_SELECTOR or fzf)
  --no-preview            Disable transcript preview
  ctrl-s (fzf only)       Toggle preview search: highlight + scroll to match / reset

Examples:
  ah show                            # show latest session transcript
  ah show -o title                    # output title of latest session
  ah show -o agent,title             # output agent and title as TSV
  ah show -i -o title                # select session, output title

Global options:
  -a, --all               Show all sessions (disable default cwd filtering)
  -A                      Show all sessions including all configured remotes
  --agent <NAME>          Filter by agent name (e.g. claude, codex, gemini)
  --project <NAME>        Filter by project name
  -d, --dir <PATH>        Filter by working directory (default: current directory)
  -q, --query <REGEX>     Full-text search query (regex, case-insensitive)
  -p, --prompt-only       Search only user prompts (use with -q)
  -n, --limit N           Max session files to scan (default: 0, no limit)
  --since <SPEC>          Show sessions newer than (e.g. "2026-03-20", "3d", "1w", "2m" = ~60 days)
  --until <SPEC>          Show sessions older than (e.g. "2026-03-20", "3d", "1w", "2m" = ~60 days)
  --running               Show only currently running sessions (Claude, Grok)
  --remote <NAME>         Include sessions from remote host (requires ah on remote; see ~/.ahrc [remotes.*])
  --color                 Force colored output (even through pipes)
  --no-color              Disable colored output
  --no-pager              Disable automatic pager
  --debug                 Show debug info (glob expansion, scan counts, timing) on stderr
